--- a/Front-end/admin-lte/usuarios.html
+++ b/Front-end/admin-lte/usuarios.html
@@ -171,16 +171,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-               <li class="nav-item ">
-                <a href="index.html" class="nav-link active">
+               <li class="nav-item">
+                <a href="index.html" class="nav-link">
                   <i class="nav-icon fas fa-suitcase"></i>
                   <p>
                     Departamentos
                   </p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="puestos.html" class="nav-link" active>
+              <li class="nav-item active">
+                <a href="puestos.html" class="nav-link" >
                   <i class="nav-icon fas fa-users"></i>
                   <p>
                     Puestos
@@ -188,7 +188,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 </a>
               </li>
               <li class="nav-item">
-                <a href="usuarios.html" class="nav-link">
+                <a href="usuarios.html" class="nav-link active">
                   <i class="nav-icon fas  fa-user"></i>
                   <p>
                     Usuarios
@@ -241,7 +241,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0 text-dark">Departamentos</h1>
+            <h1 class="m-0 text-dark">Usuarios</h1>
           </div><!-- /.col -->
          
         </div><!-- /.row -->
@@ -257,7 +257,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <div class="col-md-12">
             <div class="card card-primary collapsed-card">
               <div class="card-header">
-                <h3 class="card-title">Listado de Departamentos</h3>
+                <h3 class="card-title">Listado de usuarios</h3>
           
                 <div class="card-tools">
                   <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-plus"></i>
@@ -271,9 +271,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
                  <thead>
                    <tr>
                      <th>Nombre</th>
-                     <th>Nombre</th>
-                     <th>Nombre</th>
-                     <th>Nombre</th>
+                     <th>Apellido</th>
+                     <th>Cedula</th>
+                     <th>Correo</th>
                      <th>Acciones</th>
                    </tr>
                  </thead>
@@ -281,7 +281,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </div>
               <!-- /.card-body -->
               <div class="card-footer">
-                <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-outline btn-info">Agregar departamento</button>
+                <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-outline btn-info">Agregar usuario</button>
               </div>
             </div>
           </div>
@@ -311,16 +311,56 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Administrar departamento</h4>
+        <h4 class="modal-title">Administrar usuarios</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
       <!-- Modal body -->
       <div class="modal-body">
         <form id="form-departamento">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Nombre del departamento</label>
-            <input type="text" class="form-control" id="txtnombre" placeholder="Nombre">
+          <div class="row">
+            <div class="col-md-4">
+              <label for="">Nombre</label>
+              <input type="text" name="nombre" id="txtnombre" class="form-control">
+            </div>
+            <div class="col-md-4">
+              <label for="">Apellido</label>
+              <input type="text" name="apellido" id="txtapellido" class="form-control">
+            </div>
+            <div class="col-md-4">
+              <label for="">Cedula</label>
+              <input type="text" name="cedula" id="txtcedula" class="form-control">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <label for="">Correo</label>
+              <input type="email" name="correo" id="txtcorreo" class="form-control">
+            </div>
+            <div class="col-md-4">
+              <label for="">Telefono</label>
+              <input type="text" name="telefono" id="txttelefono" class="form-control">
+            </div>
+            <div class="col-md-4">
+              <label for="">Fecha Nacimiento</label>
+              <input type="text" name="fecha" id="txtfecha" class="form-control">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <label for="">Nombre de usuario</label>
+              <input type="text" name="usuario" id="txtusuario" class="form-control">
+            </div>
+            <div class="col-md-4">
+              <label for="">Contraseña</label>
+              <input type="password" name="pass" id="txtpass" class="form-control">
+            </div>
+            <div class="col-md-4">
+              <label for="selectdep">Nombre del puesto</label>
+            <select name="" id="selectpuesto" class="form-control">
+                <option value="0">Seleccione un puesto</option>
+            </select>
+            </div>
           </div>
           <div class="form-check">
             <input type="checkbox" name="status" class="form-check-input" id="exampleCheck1">
